fix overflow in the data upload page

--- a/app/assets/stylesheets/leads.scss
+++ b/app/assets/stylesheets/leads.scss
@@ -66,6 +66,7 @@
 
   .td-import-table-settings {
     word-wrap:break-word;
+    overflow: hidden;
     vertical-align: middle;
     }
 
